--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Happy Birthday</title>
     <style>
         body {
-            background-image: url('https://i.imgur.com/O8mry8G.jpg'); /* Use a cool birthday theme image */
+            background-image: url('https://i.imgur.com/O8mry8G.jpg'); /* Cool birthday theme background */
             background-size: cover;
             background-position: center;
             display: flex;
@@ -31,7 +31,7 @@
             height: 130px;
             background-color: #ff5f5f;
             border-radius: 50% 50% 60% 60%;
-            cursor: crosshair; /* Cursor set to a sharp pin-like crosshair */
+            cursor: url('https://cdn-icons-png.flaticon.com/512/7180/7180509.png'), auto; /* Sharp pin-like cursor */
             transition: transform 0.3s ease;
             box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
         }
@@ -141,7 +141,7 @@
 
         // Check if all balloons are popped
         function checkAllBalloonsPopped() {
-            const remainingBalloons = document.querySelectorAll('.balloon:not([style*="display: none"])');
+            const remainingBalloons = document.querySelectorAll('#balloons > div:not([style*="display: none"])');
             if (remainingBalloons.length === 0) {
                 document.getElementById('message').style.display = 'block';
                 document.querySelector('.hidden-message').style.display = 'block';
