--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
             position: absolute;
             width: 100px;
             height: 130px;
-            background-color: #ff5f5f;
-            border-radius: 50% 50% 60% 60%;
+            background-image: url('shoppingballoons.webp'); /* Using the uploaded balloon image */
+            background-size: cover;
             cursor: url('https://cdn-icons-png.flaticon.com/512/7180/7180509.png'), auto; /* Sharp pin-like cursor */
             transition: transform 0.3s ease;
             box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
