--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Happy Birthday</title>
     <style>
         body {
-            background-image: url('https://i.imgur.com/O8mry8G.jpg'); /* Cool birthday theme background */
+            background-image: url('shoppingballoons.webp'); /* Cool birthday theme background */
             background-size: cover;
             background-position: center;
             display: flex;
@@ -29,7 +29,7 @@
             position: absolute;
             width: 100px;
             height: 130px;
-            background-image: url('shoppingballoons.webp'); /* Using the uploaded balloon image */
+            background-image: url('balloon-25734_1280.webp'); /* Using the uploaded balloon image */
             background-size: cover;
             cursor: url('https://cdn-icons-png.flaticon.com/512/7180/7180509.png'), auto; /* Sharp pin-like cursor */
             transition: transform 0.3s ease;
@@ -115,7 +115,7 @@
 
     <!-- Sound for balloon pop -->
     <audio id="popSound">
-        <source src="https://www.soundjay.com/button/sounds/button-16.mp3" type="audio/mpeg">
+        <source src="balloon-pop-48030.mp3" type="audio/mpeg">
     </audio>
 
     <script>
