--- a/index.html
+++ b/index.html
@@ -6,16 +6,13 @@
     <title>Happy Birthday</title>
     <style>
         body {
-            background-image: url('shoppingballoons.webp'); /* Cool birthday theme background */
-            background-size: cover;
-            background-position: center;
+            margin: 0;
+            overflow: hidden;
+            background: #87CEEB; /* Soft sky blue background */
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
-            overflow: hidden;
-            flex-direction: column;
-            margin: 0;
         }
 
         #balloons {
