--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
             const balloon = document.createElement('div');
             balloon.classList.add('balloon');
-            balloon.style.backgroundColor = getRandomColor();
+          //  balloon.style.backgroundColor = getRandomColor();
             balloon.addEventListener('click', popBalloon);
 
             const thread = document.createElement('div');
