--- a/index.html
+++ b/index.html
@@ -131,14 +131,14 @@
 
             const balloon = document.createElement('div');
             balloon.classList.add('balloon');
-          //  balloon.style.backgroundColor = getRandomColor();
+            balloon.style.color = getRandomColor();
             balloon.addEventListener('click', popBalloon);
 
             const thread = document.createElement('div');
             thread.classList.add('thread');
 
             balloonWrapper.appendChild(balloon);
-            balloonWrapper.appendChild(thread);
+        //    balloonWrapper.appendChild(thread);
             balloonContainer.appendChild(balloonWrapper);
 
             // Store balloon with random speed and direction
