--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             position: absolute;
             width: 100px;
             height: 130px;
-            background-image: url('balloon-25734_1280.jfif'); /* Using the uploaded balloon image */
+            background-image: url('—Pngtree—red love balloon_4447810.png'); /* Using the uploaded balloon image */
             background-size: cover;
             cursor: url('https://cdn-icons-png.flaticon.com/512/7180/7180509.png'), auto; /* Sharp pin-like cursor */
             transition: transform 0.3s ease;
