--- a/index.html
+++ b/index.html
@@ -160,10 +160,39 @@
             const balloon = e.target;
             balloon.classList.add('pop'); // Add pop animation
             popSound.play(); // Play pop sound
+            balloon.style.animation = 'pop 0.3s forwards';
+            setTimeout(() => balloon.remove(), 300);
+
+            // Start sequential popping of remaining balloons
+            setTimeout(popRemainingBalloons, 300);
             setTimeout(() => {
                 balloon.parentElement.style.display = 'none'; // Remove balloon after animation
                 checkAllBalloonsPopped();
             }, 300);
+        }
+
+
+         // Sequentially pop all balloons
+        function popRemainingBalloons() {
+            let delay = 0;
+
+            balloons.forEach((balloon, index) => {
+                if (balloon.parentElement) { // If balloon is still in DOM
+                    setTimeout(() => {
+                        balloon.style.animation = 'pop 0.3s forwards';
+                        popSound.currentTime = 0;
+                        popSound.play();
+                        setTimeout(() => balloon.remove(), 300);
+                    }, delay);
+
+                    delay += 300; // Increase delay for next balloon
+                }
+            });
+        }
+
+        // Create balloons on page load
+        for (let i = 0; i < numBalloons; i++) {
+            createBalloon();
         }
 
         // Check if all balloons are popped
