--- a/index.html
+++ b/index.html
@@ -36,16 +36,6 @@
             transform: scale(1.1);
         }
 
-        .thread {
-            position: absolute;
-            width: 2px;
-            height: 70px;
-            background-color: #555;
-            top: 130px;
-            left: 50%;
-            transform: translateX(-50%);
-        }
-
         .hidden-message {
             display: none;
             text-align: center;
@@ -115,12 +105,11 @@
     </audio>
 
     <script>
-
-
         const numBalloons = 100;
         const balloonContainer = document.getElementById('balloons');
         const balloons = [];
         const popSound = document.getElementById('popSound');
+        let popped = false; // To check if a balloon has been popped
 
         // Balloon creation
         for (let i = 0; i < numBalloons; i++) {
@@ -134,19 +123,11 @@
             balloon.style.color = getRandomColor();
             balloon.addEventListener('click', popBalloon);
 
-            const thread = document.createElement('div');
-            thread.classList.add('thread');
-
             balloonWrapper.appendChild(balloon);
-        //    balloonWrapper.appendChild(thread);
             balloonContainer.appendChild(balloonWrapper);
 
-            // Store balloon with random speed and direction
-            balloons.push({
-                element: balloonWrapper,
-                speedX: (Math.random() * 2 + 1) * (Math.random() > 0.5 ? 1 : -1),
-                speedY: (Math.random() * 2 + 1) * (Math.random() > 0.5 ? 1 : -1)
-            });
+            // Store balloon in array for sequential popping
+            balloons.push(balloonWrapper);
         }
 
         // Random color generator
@@ -157,45 +138,40 @@
 
         // Balloon pop effect with sound
         function popBalloon(e) {
-            const balloon = e.target;
-            balloon.classList.add('pop'); // Add pop animation
-            popSound.play(); // Play pop sound
-            balloon.style.animation = 'pop 0.3s forwards';
-           
-            //setTimeout(() => balloon.remove(), 300);
+            if (!popped) {
+                popped = true; // Ensure only one balloon triggers the chain
+                const balloon = e.target;
+                balloon.classList.add('pop'); // Add pop animation
+                popSound.play(); // Play pop sound
 
-            // Start sequential popping of remaining balloons
-            setTimeout(popRemainingBalloons, 300);
-            
-            setTimeout(() => {
-                balloon.parentElement.style.display = 'none'; // Remove balloon after animation
-                checkAllBalloonsPopped();
-            }, 300);
+                // Sequentially pop remaining balloons
+                setTimeout(() => popRemainingBalloons(), 300);
+
+                // Check if all balloons are popped
+                setTimeout(() => {
+                    balloon.parentElement.style.display = 'none';
+                    checkAllBalloonsPopped();
+                }, 300);
+            }
         }
 
-
-         // Sequentially pop all balloons
+        // Sequentially pop all remaining balloons
         function popRemainingBalloons() {
             let delay = 0;
 
             balloons.forEach((balloon, index) => {
-                if (balloon.parentElement) { // If balloon is still in DOM
+                if (balloon && balloon.style.display !== 'none') {
                     setTimeout(() => {
-                        balloon.style.animation = 'pop 0.3s forwards';
+                        balloon.firstChild.classList.add('pop'); // Add pop animation
                         popSound.currentTime = 0;
-                        popSound.play();
-                        setTimeout(() => balloon.remove(), 300);
+                        popSound.play(); // Play pop sound
+                        setTimeout(() => balloon.style.display = 'none', 300);
                     }, delay);
 
-                    delay += 300; // Increase delay for next balloon
+                    delay += 300; // Increase delay for the next balloon
                 }
             });
         }
-
-        // Create balloons on page load
-     //   for (let i = 0; i < numBalloons; i++) {
-       //     createBalloon();
-        //}
 
         // Check if all balloons are popped
         function checkAllBalloonsPopped() {
@@ -206,30 +182,6 @@
                 document.getElementById('image').style.display = 'block';
             }
         }
-
-        // Balloon bouncing effect
-        function animateBalloons() {
-            balloons.forEach(balloon => {
-                const rect = balloon.element.getBoundingClientRect();
-                let newX = rect.left + balloon.speedX;
-                let newY = rect.top + balloon.speedY;
-
-                // Bounce off the edges of the screen
-                if (newX <= 0 || newX + rect.width >= window.innerWidth) {
-                    balloon.speedX *= -1;
-                }
-                if (newY <= 0 || newY + rect.height >= window.innerHeight) {
-                    balloon.speedY *= -1;
-                }
-
-                balloon.element.style.left = `${newX}px`;
-                balloon.element.style.top = `${newY}px`;
-            });
-
-            requestAnimationFrame(animateBalloons);
-        }
-
-        animateBalloons(); // Start the balloon animation
     </script>
 </body>
 </html>
