--- a/index.html
+++ b/index.html
@@ -205,11 +205,11 @@
         // Check if all balloons are popped
         function checkAllBalloonsPopped() {
             const remainingBalloons = document.querySelectorAll('#balloons > div:not([style*="display: none"])');
-            if (remainingBalloons.length == 0) {
+         //   if (remainingBalloons.length == 0) {
                 document.getElementById('message').style.display = 'block';
                 document.querySelector('.hidden-message').style.display = 'block';
                 document.getElementById('image').style.display = 'block';
-            }
+          //  }
         }
     </script>
 </body>
