--- a/index.html
+++ b/index.html
@@ -174,9 +174,9 @@
                     }, delay);
 
                     delay += 20; // Increase delay for the next balloon
-                    numBalloonsPopped +=1;
+                
                 }
-            });
+              numBalloonsPopped +=1; });
         }
 
         // Balloon bouncing effect
