--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         const balloons = [];
         const popSound = document.getElementById('popSound');
         let popped = false; // To check if a balloon has been popped
-        const numBalloonsPopped = 1;
+        let numBalloonsPopped = 1;
 
         // Balloon creation
         for (let i = 0; i < numBalloons; i++) {
