--- a/index.html
+++ b/index.html
@@ -3,217 +3,123 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Happy Birthday</title>
+    <title>Blow the Balloons</title>
     <style>
         body {
             margin: 0;
             overflow: hidden;
-            background: #87CEEB; /* Soft sky blue background */
+            background-color: #87CEEB; /* Soft sky blue background */
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
+            position: relative;
+            font-family: Arial, sans-serif;
+        }
+
+        #message {
+            position: absolute;
+            font-size: 3rem;
+            color: #e74c3c;
+            text-align: center;
+            background-color: rgba(255, 255, 255, 0.8);
+            padding: 20px;
+            border-radius: 8px;
+            display: none;
+            z-index: 10;
         }
 
         #balloons {
-            position: relative;
+            position: absolute;
             width: 100vw;
             height: 100vh;
-            overflow: hidden;
         }
 
         .balloon {
             position: absolute;
-            width: 250px;
-            height: 280px;
-            background-image: url('—Pngtree—red love balloon_4447810.png'); /* Using the uploaded balloon image */
+            width: 200px;
+            height: 250px;
+            background-image: url('—Pngtree—red love balloon_4447810.png'); /* Balloon image */
             background-size: cover;
-            cursor: url('https://cdn-icons-png.flaticon.com/512/7180/7180509.png'), auto; /* Sharp pin-like cursor */
-            transition: transform 0.3s ease;
-        }
-
-        .balloon:hover {
-            transform: scale(1.1);
+            cursor: pointer;
+            transition: transform 0.5s ease, opacity 0.5s ease;
         }
 
         .hidden-message {
-            display: none;
-            text-align: center;
-            font-size: 2rem;
-            color: #333;
-            margin-top: 20px;
-            background-color: rgba(255, 255, 255, 0.8);
-            padding: 10px;
-            border-radius: 8px;
-        }
-
-        #image {
-            display: none;
-            margin-top: 20px;
-            border-radius: 10px;
-        }
-
-        h1 {
-            display: none;
+            position: absolute;
             font-size: 3rem;
-            color: #e74c3c;
-            background-color: rgba(255, 255, 255, 0.8);
-            padding: 10px;
-            border-radius: 8px;
+            color: #333;
+            text-align: center;
+            opacity: 0;
+            z-index: 5;
         }
 
-        @keyframes float {
-            0% {
-                transform: translateY(0);
-            }
-            50% {
-                transform: translateY(-20px);
-            }
-            100% {
-                transform: translateY(0);
-            }
+        .balloon:hover {
+            transform: scale(0.5); /* Shrinks the balloon when hovered */
+            opacity: 0.7;
         }
 
-        @keyframes popEffect {
-            0% {
-                transform: scale(1);
-            }
-            50% {
-                transform: scale(1.5);
-                opacity: 0.5;
-            }
-            100% {
-                transform: scale(0);
-                opacity: 0;
-            }
+        .balloon-blown {
+            opacity: 0;
         }
 
-        .pop {
-            animation: popEffect 0.3s forwards;
+        .hidden {
+            display: none;
         }
     </style>
 </head>
 <body>
-    <div id="balloons"></div>
-    <h1 id="message">Happy Birthday, My Love!</h1>
-    <div class="hidden-message">Wishing you a day filled with love and happiness. You are the light of my life, and I cherish every moment with you.</div>
-    <img id="image" src="bucki.jfif" alt="Wife's Picture" width="300px">
 
-    <!-- Sound for balloon pop -->
-    <audio id="popSound">
-        <source src="balloon-pop-48030.mp3" type="audio/mpeg">
-    </audio>
+    <div id="message">You Found the Secret Message!</div>
+
+    <div id="balloons"></div>
+    <div class="hidden-message" id="secretMessage">Happy Birthday, My Love!</div>
 
     <script>
-        const numBalloons = 100;
+        const numBalloons = 50;
         const balloonContainer = document.getElementById('balloons');
-        const balloons = [];
-        const popSound = document.getElementById('popSound');
-        let popped = false; // To check if a balloon has been popped
-        let numBalloonsPopped = 0;
+        const secretMessage = document.getElementById('secretMessage');
+        const message = document.getElementById('message');
+        let balloonsBlown = 0;
 
-        // Balloon creation
+        // Set the secret message to be visible but covered by balloons
+        secretMessage.style.opacity = 1;
+        secretMessage.style.left = '50%';
+        secretMessage.style.top = '50%';
+        secretMessage.style.transform = 'translate(-50%, -50%)';
+
+        // Generate balloons
         for (let i = 0; i < numBalloons; i++) {
-            const balloonWrapper = document.createElement('div');
-            balloonWrapper.style.position = 'absolute';
-            balloonWrapper.style.top = `${Math.random() * 80}vh`;
-            balloonWrapper.style.left = `${Math.random() * 80}vw`;
-
             const balloon = document.createElement('div');
             balloon.classList.add('balloon');
-            balloon.style.color = getRandomColor();
-            balloon.addEventListener('click', popBalloon);
-
-            balloonWrapper.appendChild(balloon);
-            balloonContainer.appendChild(balloonWrapper);
-
-            // Store balloon with random speed and direction for bouncing effect
-            balloons.push({
-                element: balloonWrapper,
-                speedX: (Math.random() * 2 + 1) * (Math.random() > 0.5 ? 1 : -1),
-                speedY: (Math.random() * 2 + 1) * (Math.random() > 0.5 ? 1 : -1)
-            });
+            balloon.style.top = `${Math.random() * 80}vh`;
+            balloon.style.left = `${Math.random() * 80}vw`;
+            balloon.addEventListener('mouseover', blowBalloon);
+            balloonContainer.appendChild(balloon);
         }
 
-        // Random color generator
-        function getRandomColor() {
-            const colors = ['#ff7675', '#74b9ff', '#fd79a8', '#fdcb6e', '#55efc4', '#fab1a0', '#ffeaa7'];
-            return colors[Math.floor(Math.random() * colors.length)];
-        }
-
-        // Balloon pop effect with sound
-        function popBalloon(e) {
-            if (!popped) {
-                popped = true; // Ensure only one balloon click triggers the chain
-                const balloon = e.target;
-                balloon.classList.add('pop'); // Add pop animation
-                popSound.play(); // Play pop sound
-
-                // Sequentially pop remaining balloons
-                setTimeout(() => popRemainingBalloons(), 300);
-
-                // Check if all balloons are popped
+        // Balloon hover function
+        function blowBalloon(event) {
+            const balloon = event.target;
+            if (!balloon.classList.contains('balloon-blown')) {
+                balloon.classList.add('balloon-blown'); // Mark as blown
+                balloon.style.transform = 'scale(0.1)';
                 setTimeout(() => {
-                    balloon.parentElement.style.display = 'none';
-                    checkAllBalloonsPopped();
-                }, 300);
+                    balloon.style.display = 'none'; // Hide the balloon after animation
+                    checkAllBalloonsBlown();
+                }, 500);
             }
         }
 
-        // Sequentially pop all remaining balloons
-        function popRemainingBalloons() {
-            let delay = 0;
-
-            balloons.forEach((balloon, index) => {
-                if (balloon && balloon.element.style.display !== 'none') {
-                    setTimeout(() => {
-                        balloon.element.firstChild.classList.add('pop'); // Add pop animation
-                        popSound.currentTime = 0;
-                        popSound.play(); // Play pop sound
-                        setTimeout(() => balloon.element.style.display = 'none', 300);
-                    }, delay);
-
-                    delay += 20; // Increase delay for the next balloon
-                    numBalloonsPopped++;
-                
-                }
-              });
-        }
-
-        // Balloon bouncing effect
-        function animateBalloons() {
-            balloons.forEach(balloon => {
-                const rect = balloon.element.getBoundingClientRect();
-                let newX = rect.left + balloon.speedX;
-                let newY = rect.top + balloon.speedY;
-
-                // Bounce off the edges of the screen
-                if (newX <= 0 || newX + rect.width >= window.innerWidth) {
-                    balloon.speedX *= -1;
-                }
-                if (newY <= 0 || newY + rect.height >= window.innerHeight) {
-                    balloon.speedY *= -1;
-                }
-
-                balloon.element.style.left = `${newX}px`;
-                balloon.element.style.top = `${newY}px`;
-            });
-
-            requestAnimationFrame(animateBalloons);
-        }
-
-        // Start the balloon animation
-        animateBalloons();
-
-        // Check if all balloons are popped
-        function checkAllBalloonsPopped() {
-            const remainingBalloons = document.querySelectorAll('#balloons > div:not([style*="display: none"])');
-           if (numBalloonsPopped === numBalloons) {
-                document.getElementById('message').style.display = 'block';
-                document.querySelector('.hidden-message').style.display = 'block';
-                document.getElementById('image').style.display = 'block';
-           }
+        // Check if all balloons are blown
+        function checkAllBalloonsBlown() {
+            balloonsBlown++;
+            if (balloonsBlown === numBalloons) {
+                message.style.display = 'block'; // Show secret message
+                secretMessage.style.display = 'none'; // Hide the covered secret text
+            }
         }
     </script>
+
 </body>
 </html>
