--- a/index.html
+++ b/index.html
@@ -38,13 +38,14 @@
 
         .hidden-message {
             display: none;
-            text-align: center;
-            font-size: 2rem;
+            font-size: 1.5rem;
             color: #333;
-            margin-top: 20px;
+            text-align: center;
             background-color: rgba(255, 255, 255, 0.8);
             padding: 10px;
             border-radius: 8px;
+            margin-top: 20px;
+            width: 70%; /* Adjust width for message box */
         }
 
         #image {
