--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@ balloon.classList.add('popped');
         // Check if all balloons are popped
         function checkAllBalloonsPopped() {
             const remainingBalloons = document.querySelectorAll('#balloons > div:not(.popped)');
-           if ((numBalloonsPopped === numBalloons) && (remainingBalloons.length === 0)) {
+           if ((remainingBalloons.length === 0)) {
                 document.getElementById('message').style.display = 'block';
                 document.querySelector('.hidden-message').style.display = 'block';
                 document.getElementById('image').style.display = 'block';
