--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         body {
             margin: 0;
             overflow: hidden;
-            background: #87CEEB; /* Soft sky blue background */
+            background: #87CEEB;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -24,8 +24,8 @@
 
         .balloon {
             position: absolute;
-            width: 250px;
-            height: 280px;
+            width: 100px; /* Adjust size for smaller balloons to fit more on the screen */
+            height: 130px;
             background-image: url('—Pngtree—red love balloon_4447810.png');
             background-size: cover;
             cursor: url('https://cdn-icons-png.flaticon.com/512/7180/7180509.png'), auto;
@@ -63,6 +63,10 @@
             border-radius: 8px;
         }
 
+        .pop {
+            animation: popEffect 0.3s forwards;
+        }
+
         @keyframes popEffect {
             0% {
                 transform: scale(1);
@@ -75,10 +79,6 @@
                 transform: scale(0);
                 opacity: 0;
             }
-        }
-
-        .pop {
-            animation: popEffect 0.3s forwards;
         }
     </style>
 </head>
@@ -98,14 +98,15 @@
         const balloonContainer = document.getElementById('balloons');
         const balloons = [];
         const popSound = document.getElementById('popSound');
+        let popped = false; 
         let numBalloonsPopped = 0;
 
-        // Balloon creation
+        // Balloon creation to fill entire screen
         for (let i = 0; i < numBalloons; i++) {
             const balloonWrapper = document.createElement('div');
             balloonWrapper.style.position = 'absolute';
-            balloonWrapper.style.top = `${Math.random() * 80}vh`;
-            balloonWrapper.style.left = `${Math.random() * 80}vw`;
+            balloonWrapper.style.top = `${Math.random() * 100}vh`;
+            balloonWrapper.style.left = `${Math.random() * 100}vw`;
 
             const balloon = document.createElement('div');
             balloon.classList.add('balloon');
@@ -115,7 +116,6 @@
             balloonWrapper.appendChild(balloon);
             balloonContainer.appendChild(balloonWrapper);
 
-            // Store balloon with random speed and direction for bouncing effect
             balloons.push({
                 element: balloonWrapper,
                 speedX: (Math.random() * 2 + 1) * (Math.random() > 0.5 ? 1 : -1),
@@ -129,36 +129,56 @@
             return colors[Math.floor(Math.random() * colors.length)];
         }
 
-        // Balloon pop effect with sound
+        // Balloon pop effect with heart-shaped pattern
         function popBalloon(e) {
-            const balloon = e.target;
-            balloon.classList.add('pop'); // Add pop animation
-            popSound.play(); // Play pop sound
+            if (!popped) {
+                popped = true;
+                const balloon = e.target;
+                balloon.classList.add('pop');
+                popSound.play();
 
-            // Remove the balloon after the pop animation
-            setTimeout(() => {
-                balloon.parentElement.style.display = 'none';
-                numBalloonsPopped++;
-                checkAllBalloonsPopped();
-            }, 300);
+                // Pop remaining balloons in heart shape
+                setTimeout(() => popRemainingBalloonsHeart(), 300);
+
+                // Hide clicked balloon
+                setTimeout(() => {
+                    balloon.parentElement.style.display = 'none';
+                    checkAllBalloonsPopped();
+                }, 300);
+            }
         }
 
-        // Sequentially pop all remaining balloons
-        function popRemainingBalloons() {
+        // Heart-shaped pop pattern
+        function popRemainingBalloonsHeart() {
+            let heartShape = createHeartShape(numBalloons);
             let delay = 0;
 
-            balloons.forEach((balloon, index) => {
+            heartShape.forEach((index) => {
+                const balloon = balloons[index];
                 if (balloon && balloon.element.style.display !== 'none') {
                     setTimeout(() => {
                         balloon.element.firstChild.classList.add('pop');
                         popSound.currentTime = 0;
                         popSound.play();
                         setTimeout(() => balloon.element.style.display = 'none', 300);
+                        numBalloonsPopped++;
                     }, delay);
-
-                    delay += 10;
+                    delay += 20; 
                 }
             });
+        }
+
+        // Create a heart-shaped pattern
+        function createHeartShape(numBalloons) {
+            let shapeIndices = [];
+            for (let i = 0; i < numBalloons; i++) {
+                let x = (i % 50) - 25;
+                let y = Math.abs(Math.floor(i / 50) - 1.2);
+                if (Math.pow(x / 25, 2) + Math.pow(y / 50, 2) <= 1) {
+                    shapeIndices.push(i);
+                }
+            }
+            return shapeIndices.sort(() => Math.random() - 0.5); // Shuffle for randomness
         }
 
         // Balloon bouncing effect
@@ -168,7 +188,7 @@
                 let newX = rect.left + balloon.speedX;
                 let newY = rect.top + balloon.speedY;
 
-                // Bounce off the edges of the screen
+                // Bounce off screen edges
                 if (newX <= 0 || newX + rect.width >= window.innerWidth) {
                     balloon.speedX *= -1;
                 }
@@ -183,7 +203,6 @@
             requestAnimationFrame(animateBalloons);
         }
 
-        // Start the balloon animation
         animateBalloons();
 
         // Check if all balloons are popped
